cabal-version: >=1.10
name:          crypton-x509-util
version:       1.6.6
license:       BSD3
license-file:  LICENSE
copyright:     Vincent Hanquez <vincent@snar.org>
maintainer:    Kazu Yamamoto <kazu@iij.ad.jp>
author:        Vincent Hanquez <vincent@snarc.org>
stability:     experimental
homepage:      https://github.com/kazu-yamamoto/crypton-certificate
synopsis:      Utility for X509 certificate and chain
description:
    utility to parse, show, validate, sign and produce X509 certificates and chain.

category:      Data
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/crypton-certificate
    subdir:   x509-util

executable crypton-x509-util
    main-is:          Certificate.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base >=3 && <5,
        bytestring,
        crypton-x509 >=1.7.1,
        crypton-x509-store,
        crypton-x509-system,
        crypton-x509-validation >=1.6.3,
        asn1-types >=0.3,
        asn1-encoding,
        crypton-pem >= 0.2.4 && < 0.4,
        directory,
        hourglass,
        memory,
        crypton
