Name:                crypton-x509-util
version:             1.6.6.1
Description:         utility to parse, show, validate, sign and produce X509 certificates and chain.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snar.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Kazu Yamamoto <kazu@iij.ad.jp>
Synopsis:            Utility for X509 certificate and chain
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            https://github.com/kazu-yamamoto/crypton-certificate
Cabal-Version:       >= 1.10

Executable           crypton-x509-util
  Default-Language:  Haskell2010
  Main-Is:           Certificate.hs
  hs-source-dirs:    src
  Buildable:         True
  Build-depends:     base >= 3 && < 5
                   , bytestring
                   , crypton-x509 >= 1.8.0
                   , crypton-x509-store >= 1.7.0
                   , crypton-x509-system >= 1.7.0
                   , crypton-x509-validation >= 1.7.0
                   , crypton-asn1-types >= 0.4.1 && < 0.5
                   , crypton-asn1-encoding >= 0.10.0 && < 0.11
                   , pem
                   , directory
                   , time-hourglass
                   , memory
                   , crypton

source-repository head
  type:     git
  location: https://github.com/kazu-yamamoto/crypton-certificate
  subdir:   x509-util
