Name:                crypton-x509-validation
version:             1.7.0
Description:         X.509 Certificate and CRL validation. please see README
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Kazu Yamamoto <kazu@iij.ad.jp>
Synopsis:            X.509 Certificate and CRL validation
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            https://github.com/kazu-yamamoto/crypton-certificate
Cabal-Version:       >= 1.10

Library
  Default-Language:  Haskell2010
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , memory
                   , mtl
                   , containers
                   , time-hourglass
                   , data-default
                   , pem >= 0.1
                   , crypton-asn1-types >= 0.4.1 && < 0.5
                   , crypton-asn1-encoding >= 0.10.0 && < 0.11
                   , crypton-x509 >= 1.8.0
                   , crypton-x509-store >= 1.7.0
                   , crypton >= 0.24
                   , iproute >= 1.2.2
  Exposed-modules:   Data.X509.Validation
  Other-modules:     Data.X509.Validation.Signature
                     Data.X509.Validation.Fingerprint
                     Data.X509.Validation.Cache
                     Data.X509.Validation.Types
  ghc-options:       -Wall

Test-Suite test-x509-validation
  Default-Language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-is:           Tests.hs
  Other-modules:     Certificate
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , memory
                   , data-default
                   , tasty
                   , tasty-hunit
                   , time-hourglass
                   , crypton-asn1-types >= 0.4.1 && < 0.5
                   , crypton-asn1-encoding >= 0.10.0 && < 0.11
                   , crypton-x509 >= 1.8.0
                   , crypton-x509-store >= 1.7.0
                   , crypton-x509-validation
                   , crypton
  ghc-options:       -Wall

source-repository head
  type:     git
  location: https://github.com/kazu-yamamoto/crypton-certificate
  subdir:   x509-validation
