cabal-version: >=1.10
name:          crypton-x509-validation
version:       1.6.14
license:       BSD3
license-file:  LICENSE
copyright:     Vincent Hanquez <vincent@snarc.org>
maintainer:    Kazu Yamamoto <kazu@iij.ad.jp>
author:        Vincent Hanquez <vincent@snarc.org>
stability:     experimental
homepage:      https://github.com/kazu-yamamoto/crypton-certificate
synopsis:      X.509 Certificate and CRL validation
description:   X.509 Certificate and CRL validation. please see README
category:      Data
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/crypton-certificate
    subdir:   x509-validation

library
    exposed-modules:  Data.X509.Validation
    other-modules:
        Data.X509.Validation.Signature
        Data.X509.Validation.Fingerprint
        Data.X509.Validation.Cache
        Data.X509.Validation.Types

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=3 && <5,
        bytestring,
        memory,
        mtl,
        containers,
        hourglass,
        data-default,
        pem >=0.1,
        asn1-types >=0.3 && <0.4,
        asn1-encoding >=0.9 && <0.10,
        crypton-x509 >=1.7.5,
        crypton-x509-store >=1.6,
        crypton >=0.24,
        iproute >=1.2.2

test-suite test-x509-validation
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   Tests
    other-modules:    Certificate
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=3 && <5,
        bytestring,
        memory,
        data-default,
        tasty,
        tasty-hunit,
        hourglass,
        asn1-types,
        asn1-encoding,
        crypton-x509 >=1.7.1,
        crypton-x509-store,
        crypton-x509-validation,
        crypton
